<resources>
    <string name="app_name">androidAppKeep</string>
    <string name="title_activity_main0">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_account">Account</string>
    <string name="community">Community</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_community">Community</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">jane@example.com</string>
    <string name="prompt_password">**********</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="agreement">By signing up, you agree to Photo’s Terms of Service and Privacy Policy.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>