<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sarachen.androidappkeep.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_course_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.sarachen.androidappkeep.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover_course_list" />
    <fragment
        android:id="@+id/navigation_community"
        android:name="com.sarachen.androidappkeep.ui.community.CommunityFragment"
        android:label="@string/community"
        tools:layout="@layout/fragment_community" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sarachen.androidappkeep.ui.notifications.NotificationsFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_notifications" />

</navigation>