<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">
    <FrameLayout
        android:id="@+id/login_main_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="66dp"
                android:layout_marginEnd="4dp"
                android:text="Login"
                android:textSize="30dp"
                android:fontFamily="@font/comfortaa"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />
            <EditText
                android:id="@+id/login_username"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_email"
                android:background="@drawable/login_edit_text_border"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:focusedByDefault="false"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/login_edit_text_border"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_username" />
            <LinearLayout
                android:id="@+id/login_btn_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_password"
                app:layout_constraintVertical_bias="0.2">
                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/login_edit_btn"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="18dp"
                    android:fontFamily="@font/momcake_bold"
                    android:text="@string/action_sign_in_short" />
                <Button
                    android:id="@+id/login_register_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:background="@drawable/login_edit_btn"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="18dp"
                    android:fontFamily="@font/momcake_bold"
                    android:text="@string/action_register_short" />
            </LinearLayout>
            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                style="?android:attr/progressBarStyleLarge"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/login_password"
                app:layout_constraintStart_toStartOf="@+id/login_password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>